--- a/client/index.html
+++ b/client/index.html
@@ -84,13 +84,7 @@
                   </p>
                   
                   <ul id="connected-users-list" class="unstyled">
-                    <!--
-                    <li class="connected-user-item">Bill</li>
-                    <li class="connected-user-item">Steve</li>
-                    <li class="connected-user-item">Bill</li>
-                    <li class="connected-user-item">Steve</li>
-                    <li class="connected-user-item">Bill</li>
-                    -->
+                    
                   </ul>
 
                 </div>
@@ -133,10 +127,10 @@
 
         </div> <!-- /container -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="http://code.jquery.com/jquery.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="http://localhost:1337/socket.io/socket.io.js"></script>
+        <script src="http://tellki.aws.af.cm/socket.io/socket.io.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
